# intro-to-python

./: .replit  README.md  beak  beak.py  main.py  pyproject.toml  setup.sh  success.py
Lesson 1/: main.py  task1.py  task3.py  task4.py  task5.py
lesson1/: intro.py  task2.py  task5.py
lesson2/: intro.py  task1.py  task2.py  task3.py  task4.py  task5.py
lesson3/: intro.py  task1.py  task2.py  task3.py  task4.py  task5.py
lesson4/: task1.py  task2.py  task3.py
lesson5/: task1.py  task2.py  task3.py  task4.py  task5.py
lesson6/: task1.py  task2.py  task3.py  task4.py
