[tool.poetry]
name = "repl_python3_intro-to-python"
version = "0.1.0"
description = ""
authors = ["pdavisonreiber <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
art = "^5.2"
curses-menu = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
